<resources>
    <string name="app_name">FirstProject</string>
    <string name="submit">Submit</string>
    <string name="relative_layout">Relative Layout</string>
    <string name="linear_layout">Linear Layout</string>
    <string name="frame_layout">Frame Layout</string>
    <string name="table_layout">Table Layout</string>
    <string name="event_handling">Event Handling</string>
    <string name="list_view">List View</string>
    <string name="card_spinner_view">Card Spinner View</string>
    <string name="recycler_view">Recycler View</string>
    <string name="fragment_nav">Fragment Navigation</string>

    <string-array name="names">
        <item>John</item>
        <item>Shiba</item>
        <item>Bruno</item>
        <item>Rojen</item>
        <item>Aron</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bookRecyclerView">Book Recycler</string>
    <string name="movie_title">Title</string>
    <string name="movie_description">Description</string>
    <string name="movie_released_year">Release Year</string>
    <string name="movie">Movie</string>
    <string name="movie_released_date">Release Date</string>
    <string name="seond_assignment">Second Assignment</string>
    <string name="movie_director">Director</string>
    <string name="movie_image">Image Url</string>
    <string name="web_view_example">Web View Example</string>
</resources>