<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MovieForm"
    android:padding="40dp">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:cardElevation="10dp"
        app:cardCornerRadius="20dp"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="30dp"
            android:orientation="vertical"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/movie"
                android:textColor="@color/black"
                android:textSize="40dp"
                android:textStyle="bold"
                android:layout_centerHorizontal="true"
                android:id="@+id/movieText"
                />


            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/movie_title"
                android:layout_below="@+id/movieText"
                android:id="@+id/movieTitle"
                android:inputType="text"
                android:layout_marginTop="20dp"
                />

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/movie_description"
                android:layout_below="@+id/movieTitle"
                android:layout_marginTop="20dp"
                android:id="@+id/movieDescription"
                android:inputType="text"
                />

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/movie_released_date"
                android:layout_below="@+id/movieDescription"
                android:layout_marginTop="20dp"
                android:id="@+id/movieReleaseDate"
                android:inputType="number"
                />

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/movie_director"
                android:layout_below="@+id/movieReleaseDate"
                android:layout_marginTop="20dp"
                android:id="@+id/movieDirector"
                android:inputType="text"
                />

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/movie_image"
                android:layout_below="@+id/movieDirector"
                android:layout_marginTop="20dp"
                android:id="@+id/movieImage"
                android:inputType="textUri"
                />


            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/movieImage"
                android:text="@string/submit"
                android:textStyle="bold"
                android:layout_marginTop="20dp"
                app:cornerRadius="5dp"
                android:backgroundTint="@color/black"
                android:id="@+id/movieSubmit"
                />
        </RelativeLayout>


    </com.google.android.material.card.MaterialCardView>


</androidx.constraintlayout.widget.ConstraintLayout>